# BloomClient-V2

./: .gitignore  BUGS.md  CHANGELOG_RULES.md  CONTRIBUTING.md  CUSTOM_HALO_HAT_GUIDE.md  DESIGN_RULES.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: check.yml  release.yml
benchmark-mod/: LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
benchmark-mod/src/client/java/dev/bloomclient/benchmark/: BloomBenchmarkClient.java
benchmark-mod/src/main/resources/: fabric.mod.json
benchmark-mod/src/main/resources/assets/bloom_autotune/lang/: en_us.json
bloom-cosmetics-mod/: build.gradle  gradle.properties  settings.gradle
bloom-cosmetics-mod/src/main/java/org/bloomclient/cosmetics/: BloomCapeService.java  BloomCosmeticsClient.java  BloomHatFeatureRenderer.java  BloomHatMesh.java  BloomHatService.java  BloomWingFeatureRenderer.java  BloomWingService.java
bloom-cosmetics-mod/src/main/java/org/bloomclient/cosmetics/mixin/client/: AbstractClientPlayerEntityMixin.java  LivingEntityRendererAccessor.java  PlayerEntityRendererMixin.java
bloom-cosmetics-mod/src/main/resources/: bloom-cosmetics.client.mixins.json  fabric.mod.json
scripts/: build-cosmetics-mod.mjs
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/services/: capes.ts  hats.ts  wings.ts
tools/release-manager/: BloomReleaseManager.csproj  Launch-ReleaseManager.ps1  Program.cs  README.md
tools/release-manager/ui/: app.js  index.html  styles.css
