[package]
name = "bloomclient"
version = "0.1.0"
description = "An open-source Minecraft desktop client"
authors = ["Bloom Client contributors"]
edition = "2021"

[lib]
name = "bloomclient_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time"] }
zip = "2"
mc-launcher-core = "0.1.1"
keyring = "3.6.3"
