[package]
name = "bloomclient"
version = "1.1.3"
description = "An open-source Minecraft desktop client"
authors = ["Bloom Client contributors"]
edition = "2021"

[lib]
name = "bloomclient_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking", "multipart"] }
futures-util = "0.3"
tokio = { version = "1", features = ["time"] }
zip = "2"
sha2 = "0.10"
mc-launcher-core = "0.1.1"
keyring = { version = "3.6.3", features = ["windows-native"] }
base64 = "0.22"
rfd = "0.15"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
